Added files via upload
please

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <nav>
 </header>
 
-
 <img class="my-pic"
      src=http://jxqr97.github.io/img/me3.jpg>
 <img
-     
+<br />
+<blockquote> &ldquo;I am no bird; and no net ensnares me: I am a free human being with an independent will.&rdquo; <br />&bsim;Charlotte Bront&euml;, Jane Eyre</blockquote>
+
 <!-- Icons -->
 <p>Contact me:</p>
 <div class="icons">
@@ -206,6 +207,7 @@
   </ul>
 
 </div>
+
 
 
 <!-- Footer -->
