--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
 <a id="resume">Resume</a>
 <!-- Resume -->
 <!-- <h1>Biography</h1> -->
-<p>My name is Jemma Riedel. I am a freshman with junior status at Eastern Washington University. I was in the Running Start Program and earned an Associates of Arts and Science degree along with my high school diploma during 11th and 12th grades. I am currently working on a bachelor's in Public Relations with a double minor in English and Journalism. I want to combine my passions and my degrees after college and work for a non-profit organization.</p><br />
-<p>My junior and senior years of high school I was awarded the Youth United Varsity Letter in Community Service. Since May of 2013, I have volunteered with a non-profit organization known as ONE. <a href="one.org">ONE</a> works to end extreme poverty and preventable disease through grassroots advocacy. I was the secretary of the Wenatchee Valley College ONE chapter for a year, before becoming the president. Last March I flew to Washington D.C. to attend the ONE Power Summit where I lobbied congress to increase spending for programs like GAVI, PEPEFAR, and the Global Fund.</p>
+<p>My name is Jemma Riedel. I am a freshman with junior status at Eastern Washington University. I was in the Running Start Program and earned an Associates of Arts and Science degree along with my high school diploma my last two years of High School. I am currently working on a bachelor's in Public Relations with a double minor in English and Journalism. I want to combine my passions and degrees after college and work for a non-profit organization.</p><br />
+<p>My junior and senior years of high school I was awarded the Youth United Varsity Letter in Community Service. Since May of 2013, I have volunteered with a non-profit organization known as ONE. <a href="one.org" target="_blank">ONE</a> works to end extreme
+  poverty and preventable disease through grassroots advocacy. I was the secretary of the Wenatchee Valley College ONE chapter for a year, before becoming the president. Last March, I flew to Washington D.C. to attend the ONE Power Summit where I lobbied
+  congress to increase spending for life-saving programs like GAVI, PEPEFAR, and the Global Fund.</p>
 
 <!-- <h1>Resume</h1> -->
 <main>
-<!--   <p>2645 Squilchuck // Wenatchee, WA 98801<br /> (509) 683-2782 // jemma.riedel@gmail.com</p> -->
-
   <h2>Education</h2>
   <p>
-    Eastern Washington University, Cheney, WA<br /> Graduation June 2017<br /> Public Relations | Bachelor's<br /> English | Minor<br /> Journalism | Minor <br /> Leadership | Certificate</p><br /> 
+    Eastern Washington University, Cheney, WA<br /> Graduation June 2017<br /> Public Relations | Bachelor's<br /> English | Minor<br /> Journalism | Minor <br /> Leadership | Certificate</p><br />
 
   <p>Wenatchee Valley College, Wenatchee, WA<br /> Graduated June 2015<br /> Associates of Arts and Science <br /> Washington State High School Diploma </p>
-  
+
   <h2>Skills</h2>
-    <li class="resume-list">Photography</li>
-    <li class="resume-list">Writing</li>
-    <li class="resume-list">Web Design</li>
-    <li class="resume-list">Planning/Organizing</li>
-    <li class="resume-list">Leadership</li>
+  <li class="resume-list">Photography</li>
+  <li class="resume-list">Writing</li>
+  <li class="resume-list">Web Design</li>
+  <li class="resume-list">Planning/Organizing</li>
+  <li class="resume-list">Leadership</li>
   <h2>Volunteer Experience/Awards</h2>
   <ul>
     <li class="resume-list">Youth United Community Service Varsity letter (2013-2014, 2014-2015)</li>
@@ -81,21 +81,21 @@
   </ul>
 
   <h2>Job Experience</h2>
-  
-<p>Courtesy Clerk | Summer 2015 <br /> Safeway, Wenatchee, WA</p>
-     <ul>
-      <li class="resume-list">Assisted customers with retrieving itmes</li>
-      <li class="resume-list">Assisted other employees</li>
-      <li class="resume-list">Kept the store clean</li>
-     </ul>
+
+  <p>Courtesy Clerk | Summer 2015 <br /> Safeway, Wenatchee, WA</p>
+  <ul>
+    <li class="resume-list">Assisted customers with retrieving itmes</li>
+    <li class="resume-list">Assisted other employees</li>
+    <li class="resume-list">Kept the store clean</li>
+  </ul>
   <br />
-    <p>Child Care | Summer 2014, Summer 2015<br /> Wenatchee, WA</p>
-    <ul>
-      <li class="resume-list">Prepared meals and cleaned</li>
-      <li class="resume-list">Read to children and engaged in various educational and fun activities/crafts</li>
-      <li class="resume-list">Maintained a child-friendly, safe environment</li>
-      <li class="resume-list">Escorted/Transported children on outings</li>
-    </ul>
+  <p>Child Care | Summer 2014, Summer 2015<br /> Wenatchee, WA</p>
+  <ul>
+    <li class="resume-list">Prepared meals and cleaned</li>
+    <li class="resume-list">Read to children and engaged in various educational and fun activities/crafts</li>
+    <li class="resume-list">Maintained a child-friendly, safe environment</li>
+    <li class="resume-list">Escorted/Transported children on outings</li>
+  </ul>
 </main>
 
 <br />
@@ -105,103 +105,123 @@
 <div>
   <ul class="portfolio-grid">
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1231.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1231.resized.JPG" alt="full moon" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1231.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1231.resized.JPG"/>
+        <figcaption>Full moon </figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/flower%20quote%20image.jpg">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/flower%20quote%20image.jpg" alt="flower quote" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/flower%20quote%20image.jpg" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/flower%20quote%20image.jpg"/>
+        <figcaption>Spring tulip</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1526.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1526.resized.JPG" alt="birds in a tree" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1526.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1526.resized.JPG"/>
+        <figcaption>Birds in a tree on a cloudy day</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1567.jpg">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1567.resized.jpg" alt="bird" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1567.jpg" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1567.resized.jpg"/>
+        <figcaption>Jay</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1805.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1805.resized.JPG" alt="boy in blue" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1805.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1805.resized.JPG"/>
+        <figcaption>Boy in blue</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3299.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3299.resized.JPG" alt="Arc de Triomphe" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3299.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3299.resized.JPG"/>
+        <figcaption>Arc de Triomphe</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1845.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1845.resized.JPG" alt="duck on columbia" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1845.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1845.resized.JPG"/>
+        <figcaption>Duck on the Columbia River</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1880.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1880.resized.JPG" alt="red bike" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1880.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1880.resized.JPG"/>
+        <figcaption>Red bike in Confluence Park</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1981.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1981resized.JPG" alt="4th of July" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_1981.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_1981resized.JPG"/>
+        <figcaption>Fireworks on the 4th of July</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2338.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2338.resized.JPG" alt="Seattle Sunset" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2338.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2338.resized.JPG"/>
+        <figcaption>Seattle from CenturyLink Field</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2560.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2560.resized.JPG" alt="Amsterdam Canal" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2560.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2560.resized.JPG"/>
+        <figcaption>Amsterdam Canal</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2803.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2803.JPG" alt="Parents in Paris" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2803.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2803.JPG"/>
+        <figcaption>Parents in Paris</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3070.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3070.resized.JPG" alt="Raven in Versailles" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3070.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3070.resized.JPG"/>
+        <figcaption>Raven in Versailles</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3144.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3144.resized.JPG" alt="Stairs in Paris hotel" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3144.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3144.resized.JPG"/>
+        <figcaption>Stairs in Paris hotel</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3911.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3911resized.JPG" alt="Rome" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_3911.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_3911resized.JPG"/>
+        <figcaption>Roman street</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_4171.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_4171.resized.JPG" alt="Pompeii tree" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_4171.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_4171.resized.JPG"/>
+        <figcaption>Resolute Pompeii tree</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_4553.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_4553resized.JPG" alt="Venice" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_4553.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_4553resized.JPG"/>
+        <figcaption>Venice canal</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_5166.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_5166.resized.JPG" alt="Bavarian trees" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_5166.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_5166.resized.JPG"/>
+        <figcaption>Bavarian trees</figcaption>
       </a>
     </li>
     <li>
-      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_5297.JPG">
-        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_5297.resized.JPG" alt="Spokane latern festival" />
+      <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_5297.JPG" target="_blank">
+        <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_5297.resized.JPG"/>
+        <figcaption>Spokane latern festival</figcaption>
       </a>
     </li>
     <li>
-    <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2397.JPG">
-      <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2397.resized.JPG" alt="Henry" />
+    <a href="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/IMG_2397.JPG" target="_blank">
+      <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Portfolio%20Web%20Design%20pictures/IMG_2397.resized.JPG"/>
+      <figcaption>Henry Lewis Riedel</figcaption>
       </a>
     </li>
   </ul>
