Added files via upload
one link fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Resume -->
 <!-- <h1>Biography</h1> -->
 <p>My name is Jemma Riedel. I am a freshman with junior status at Eastern Washington University. I was in the Running Start Program and earned an Associates of Arts and Science degree along with my high school diploma my last two years of High School. I am currently working on a bachelor's in Public Relations with a double minor in English and Journalism. I want to combine my passions and degrees after college and work for a non-profit organization.</p><br />
-<p>My junior and senior years of high school I was awarded the Youth United Varsity Letter in Community Service. Since May of 2013, I have volunteered with a non-profit organization known as ONE. <a href="one.org" target="_blank">ONE</a> works to end extreme
+<p>My junior and senior years of high school I was awarded the Youth United Varsity Letter in Community Service. Since May of 2013, I have volunteered with a non-profit organization known as ONE. <a href="https://www.one.org" target="_blank">ONE</a> works to end extreme
   poverty and preventable disease through grassroots advocacy. I was the secretary of the Wenatchee Valley College ONE chapter for a year, before becoming the president. Last March, I flew to Washington D.C. to attend the ONE Power Summit where I lobbied
   congress to increase spending for life-saving programs like GAVI, PEPEFAR, and the Global Fund.</p>
 
