Added files via upload
updates

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 <!-- Icons -->
 <p>Contact me:</p>
 <div class="icons">
-  						<a href="https://www.linkedin.com/in/jemma-riedel-b2017710a">
+  						<a href="https://www.linkedin.com/in/jemma-riedel-b2017710a" target="_blank">
   <img src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/linkedin%20icon%20iconmonstr.png" class="linkedin">
 		  						
-  <a href="https://twitter.com/jxqr3710">
+  <a href="https://twitter.com/jxqr3710" target="_blank">
   <img    src="https://raw.githubusercontent.com/jxqr97/jxqr97.github.io/master/img/Style%20Tile/iconmonstr-twitter-3-120.png" class="twitter">
 		  
   <a href="mailto:jemma.riedel@gmail.com">
@@ -53,7 +53,7 @@
 <a id="resume">Resume</a>
 <!-- Resume -->
 <!-- <h1>Biography</h1> -->
-<p>My name is Jemma Riedel. I am a freshman with junior status at Eastern Washington University. I was in the Running Start Program and earned an Associates of Arts and Science degree along with my high school diploma my last two years of High School. I am currently working on a bachelor's in Public Relations with a double minor in English and Journalism. I want to combine my passions and degrees after college and work for a non-profit organization.</p><br />
+<p>I am a freshman with junior status at Eastern Washington University. I was in the Running Start Program and earned an Associates of Arts and Science degree along with my high school diploma my last two years of High School. I am currently working on a bachelor's in Public Relations with a double minor in English and Journalism. I want to combine my passions and degrees after college and work for a non-profit organization.</p><br />
 <p>My junior and senior years of high school I was awarded the Youth United Varsity Letter in Community Service. Since May of 2013, I have volunteered with a non-profit organization known as ONE. <a href="https://www.one.org" target="_blank">ONE</a> works to end extreme
   poverty and preventable disease through grassroots advocacy. I was the secretary of the Wenatchee Valley College ONE chapter for a year, before becoming the president. Last March, I flew to Washington D.C. to attend the ONE Power Summit where I lobbied
   congress to increase spending for life-saving programs like GAVI, PEPEFAR, and the Global Fund.</p>
@@ -72,6 +72,7 @@
   <li class="resume-list">Web Design</li>
   <li class="resume-list">Planning/Organizing</li>
   <li class="resume-list">Leadership</li>
+  
   <h2>Volunteer Experience/Awards</h2>
   <ul>
     <li class="resume-list">Youth United Community Service Varsity letter (2013-2014, 2014-2015)</li>
@@ -81,7 +82,6 @@
   </ul>
 
   <h2>Job Experience</h2>
-
   <p>Courtesy Clerk | Summer 2015 <br /> Safeway, Wenatchee, WA</p>
   <ul>
     <li class="resume-list">Assisted customers with retrieving itmes</li>
